--- a/index.html
+++ b/index.html
@@ -52,6 +52,31 @@
       .game-container {
         max-height: 80vh; /* Increase height for mobile screens */
       }
+      #resetButton {
+        font-size: 14px; /* Smaller font size for mobile */
+        padding: 8px 16px;
+      }
+      #gameOverOverlay {
+        font-size: 18px; /* Adjust font size for mobile */
+        padding-top: 30px; /* Adjust padding for mobile */
+      }
+    }
+    /* Game over overlay styles */
+    #gameOverOverlay {
+      display: none; /* Hidden by default */
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      text-align: center;
+      padding-top: 50px;
+      font-size: 24px;
+      font-weight: bold;
+      border-radius: 10px;
+      box-sizing: border-box;
     }
   </style>
 </head>
@@ -59,11 +84,17 @@
   <div class="game-container">
     <canvas id="gameCanvas"></canvas>
     <button id="resetButton">Reset Game</button>
+    <div id="gameOverOverlay">
+      Game Over<br>
+      Final Score: <span id="finalScore">0</span>
+    </div>
   </div>
 
   <script>
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
+    const gameOverOverlay = document.getElementById('gameOverOverlay');
+    const finalScoreElement = document.getElementById('finalScore');
 
     // Set the canvas dimensions based on container size
     function resizeCanvas() {
@@ -147,6 +178,7 @@
       pipes = [];
       pipeSpeed = 1;
       gameRunning = true;
+      gameOverOverlay.style.display = 'none'; // Hide the overlay
       gameLoop();
     }
 
@@ -231,8 +263,12 @@
         gameRunning = false;
       }
 
-      // Continue the game loop
-      if (gameRunning) {
+      // Display game over screen if the game has stopped
+      if (!gameRunning) {
+        gameOverOverlay.style.display = 'flex'; // Show the overlay
+        finalScoreElement.textContent = score; // Update the final score
+      } else {
+        // Continue the game loop
         requestAnimationFrame(gameLoop);
       }
     }
