--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
       border-radius: 10px;
       box-sizing: border-box;
     }
+    #playAgainButton {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+    }
+    #playAgainButton:hover {
+      background-color: #45a049;
+    }
   </style>
 </head>
 <body>
@@ -87,6 +101,8 @@
     <div id="gameOverOverlay">
       Game Over<br>
       Final Score: <span id="finalScore">0</span>
+      <br>
+      <button id="playAgainButton">Play Again</button>
     </div>
   </div>
 
@@ -95,6 +111,7 @@
     const ctx = canvas.getContext('2d');
     const gameOverOverlay = document.getElementById('gameOverOverlay');
     const finalScoreElement = document.getElementById('finalScore');
+    const playAgainButton = document.getElementById('playAgainButton');
 
     // Set the canvas dimensions based on container size
     function resizeCanvas() {
@@ -155,6 +172,7 @@
 
     // Reset the game
     document.getElementById('resetButton').addEventListener('click', resetGame);
+    playAgainButton.addEventListener('click', resetGame); // Reset when "Play Again" button is clicked
 
     // Create pipes
     function generatePipes() {
@@ -181,101 +199,102 @@
       gameOverOverlay.style.display = 'none'; // Hide the overlay
       gameLoop();
     }
-// Main game loop
-function gameLoop() {
-  if (!gameRunning) return;
 
-  // Clear the canvas
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+    // Main game loop
+    function gameLoop() {
+      if (!gameRunning) return;
 
-  // Draw background image
-  ctx.drawImage(bgImg, 0, 0, canvas.width, canvas.height);
+      // Clear the canvas
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-  // Draw bird
-  ctx.drawImage(birdImg, bird.x, bird.y, bird.width, bird.height);
+      // Draw background image
+      ctx.drawImage(bgImg, 0, 0, canvas.width, canvas.height);
 
-  // Apply gravity
-  velocity += gravity;
-  bird.y += velocity;
+      // Draw bird
+      ctx.drawImage(birdImg, bird.x, bird.y, bird.width, bird.height);
 
-  // Make the bird fall automatically when the score hits 98
-  if (score >= 97) {
-    velocity = 10; // Adjust the fall speed as needed
-  }
+      // Apply gravity
+      velocity += gravity;
+      bird.y += velocity;
 
-  // Generate pipes at intervals
-  if (pipes.length === 0 || pipes[pipes.length - 1].x < canvas.width / 2) {
-    generatePipes();
-  }
+      // Make the bird fall automatically when the score hits 98
+      if (score >= 97) {
+        velocity = 10; // Adjust the fall speed as needed
+      }
 
-  // Adjust game difficulty based on score
-  if (score > 70) {
-    pipeGap = 90; // Decrease gap between pipes
-    gravity = 0.35; // Increase gravity to make the bird fall faster
-    pipeSpeed = 3; // Increase pipe speed
-    pipeWidth = 50; // Decrease pipe width
-  } else if (score > 50) {
-    pipeGap = 130; // Decrease gap between pipes
-    gravity = 0.3; // Increase gravity
-    pipeSpeed = 2; // Increase pipe speed
-    pipeWidth = 60; // Decrease pipe width
-  } else if (score > 30) {
-    pipeGap = 150; // Increase gap between pipes
-    gravity = 0.18; // Increase gravity
-    pipeSpeed = 1.5; // Increase pipe speed
-    pipeWidth = 70; // Keep pipe width increased until score reaches 30
-  } else {
-    pipeGap = 200; // Keep initial gap between pipes
-    pipeWidth = 70; // Keep initial pipe width
-  }
+      // Generate pipes at intervals
+      if (pipes.length === 0 || pipes[pipes.length - 1].x < canvas.width / 2) {
+        generatePipes();
+      }
 
-  // Move and draw pipes
-  pipes.forEach((pipe, index) => {
-    pipe.x -= pipeSpeed;
+      // Adjust game difficulty based on score
+      if (score > 70) {
+        pipeGap = 90; // Decrease gap between pipes
+        gravity = 0.35; // Increase gravity to make the bird fall faster
+        pipeSpeed = 3; // Increase pipe speed
+        pipeWidth = 50; // Decrease pipe width
+      } else if (score > 50) {
+        pipeGap = 130; // Decrease gap between pipes
+        gravity = 0.3; // Increase gravity
+        pipeSpeed = 2; // Increase pipe speed
+        pipeWidth = 60; // Decrease pipe width
+      } else if (score > 30) {
+        pipeGap = 150; // Increase gap between pipes
+        gravity = 0.18; // Increase gravity
+        pipeSpeed = 1.5; // Increase pipe speed
+        pipeWidth = 70; // Keep pipe width increased until score reaches 30
+      } else {
+        pipeGap = 200; // Keep initial gap between pipes
+        pipeWidth = 70; // Keep initial pipe width
+      }
 
-    // Stylish top pipe
-    ctx.fillStyle = '#006400'; // Darker green color for pipes
-    ctx.fillRect(pipe.x, 0, pipeWidth, pipe.top);
+      // Move and draw pipes
+      pipes.forEach((pipe, index) => {
+        pipe.x -= pipeSpeed;
 
-    // Stylish bottom pipe
-    ctx.fillRect(pipe.x, pipe.bottom, pipeWidth, canvas.height - pipe.bottom);
+        // Stylish top pipe
+        ctx.fillStyle = '#006400'; // Darker green color for pipes
+        ctx.fillRect(pipe.x, 0, pipeWidth, pipe.top);
 
-    // Check for collision
-    if (
-      bird.x + bird.width > pipe.x &&
-      bird.x < pipe.x + pipeWidth &&
-      (bird.y < pipe.top || bird.y + bird.height > pipe.bottom)
-    ) {
-      gameRunning = false;
+        // Stylish bottom pipe
+        ctx.fillRect(pipe.x, pipe.bottom, pipeWidth, canvas.height - pipe.bottom);
+
+        // Check for collision
+        if (
+          bird.x + bird.width > pipe.x &&
+          bird.x < pipe.x + pipeWidth &&
+          (bird.y < pipe.top || bird.y + bird.height > pipe.bottom)
+        ) {
+          gameRunning = false;
+        }
+
+        // Check if pipe is offscreen, and increment score
+        if (pipe.x + pipeWidth < 0) {
+          pipes.splice(index, 1);
+          score++;
+        }
+      });
+
+      // Draw score on the canvas
+      ctx.fillStyle = '#333';
+      ctx.font = '24px Arial';
+      ctx.textAlign = 'right';
+      ctx.fillText(`Score: ${score}`, canvas.width - 20, 40);
+
+      // Check if bird hits the ground
+      if (bird.y + bird.height > canvas.height) {
+        gameRunning = false;
+      }
+
+      // Display game over screen if the game has stopped
+      if (!gameRunning) {
+        gameOverOverlay.style.display = 'flex'; // Show the overlay
+        finalScoreElement.textContent = score; // Update the final score
+      } else {
+        // Continue the game loop
+        requestAnimationFrame(gameLoop);
+      }
     }
-
-    // Check if pipe is offscreen, and increment score
-    if (pipe.x + pipeWidth < 0) {
-      pipes.splice(index, 1);
-      score++;
-    }
-  });
-
-  // Draw score on the canvas
-  ctx.fillStyle = '#333';
-  ctx.font = '24px Arial';
-  ctx.textAlign = 'right';
-  ctx.fillText(`Score: ${score}`, canvas.width - 20, 40);
-
-  // Check if bird hits the ground
-  if (bird.y + bird.height > canvas.height) {
-    gameRunning = false;
-  }
-
-  // Display game over screen if the game has stopped
-  if (!gameRunning) {
-    gameOverOverlay.style.display = 'flex'; // Show the overlay
-    finalScoreElement.textContent = score; // Update the final score
-  } else {
-    // Continue the game loop
-    requestAnimationFrame(gameLoop);
-  }
-}
 
   </script>
 </body>
