--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       box-sizing: border-box;
     }
     #playAgainButton {
-      padding: 10px 20px;
+
       font-size: 16px;
-      background-color: #4CAF50;
+      background-color: transparent;
       color: white;
       border: none;
       border-radius: 5px;
@@ -89,9 +89,7 @@
       margin-top: 20px;
       transition: background-color 0.3s ease;
     }
-    #playAgainButton:hover {
-      background-color: #45a049;
-    }
+    
   </style>
 </head>
 <body>
